tests/suite/fail/generated/types/fail_mod_bool_i32.ny
fn main() {
    let _ = true % 1 //~ ERROR type mismatch in `arithmetic` operation
}
